Add a blvelocity tool to calculate daily velocity per sprint and mean velocity over time

--- a/examples/example.org
+++ b/examples/example.org
@@ -23,3 +23,6 @@
   * The DEADLINE Emacs Org-Mode tag is the date when the story was done.
 
   This is actually MANDATORY to be able to consider a story to be done.
+
+* DONE 06 Another story to place in second sprint to verify blvelocity
+  SCHEDULED: <2017-01-09> DEADLINE: <2017-01-10>
